# ros_leason

2/ex03/alex/: CMakeLists.txt  package.xml
2/ex04/: colcon_build.txt
2/ex05/: rosnode_info.txt  rosnode_list.txt
2/ex06/: cmd_vel.txt
2/ex08/: rqt_console.csv
2/ex09/ex9/: CMakeLists.txt  package.xml
2/ex10/: 2.10.txt
2/ex10/text_to_cmd_vel/: package.xml  setup.py
2/ex10/text_to_cmd_vel/text_to_cmd_vel/: pub_move.py  sub_move.py
3/ex1/: start.txt
3/ex1/full_name_interface/: CMakeLists.txt  package.xml
3/ex1/service_full_name/: package.xml  setup.py
3/ex1/service_full_name/service_full_name/: client_member_function.py  service_member_function.py
3/ex2/: comands.txt
3/ex3/: comand.txt  pose_speed_x1.yaml  pose_speed_x2.yaml
3/ex3/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
3/ex4/: comand.txt  doctor.txt
3/ex5/move_to_goal/: package.xml  setup.py
4/ex01/: comand.txt  last_transform.txt  transform.txt
4/ex02/: comand.txt
4/ex02/maniac/: setup.cfg  setup.py
4/ex03/: comand.txt
4/ex03/maniac/: package.xml
5/ex1/: comand.txt
5/ex1/sam_bot_description/: CMakeLists.txt  package.xml
5/ex2/: comand.txt  display.launch.py  model.urdf
5/ex3/: comand.txt
5/ex4/: comand.txt
5/ex4/circle_move/: package.xml  setup.py
5/ex5/: comand.txt
5/ex5/unic_go/: package.xml  setup.cfg  setup.py
6/ex1/: comand.txt
6/ex2/: comand.txt
6/ex3/: comand.txt
6/ex4/: comand.txt
6/ex5/: comand.txt
6/ex5/img_depth/: package.xml  setup.cfg  setup.py
6/ex5/move_depth/: package.xml  setup.cfg  setup.py
(+23 files in other folders)
