<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>full_name_message</name>
  <version>0.0.0</version>
  <description>taska</description>
  <maintainer email="emelyanov_98@mail.ru">alex</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>geometry_msgs</depend>
  <!-- rosidl_default_runtime— это зависимость времени выполнения или этапа выполнения, необходимая для возможности использования интерфейсов позже.  -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <!-- Это rosidl_interface_packagesимя группы зависимостей,  -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- tutorial_interfacesс которой должен быть связан ваш пакет, объявленное с помощью <member_of_group>тега. -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
<!-- Поскольку интерфейсы полагаются на rosidl_default_generatorsгенерацию кода, специфичного для языка,  -->
